	-> move doc upload and search button from left document tab to the main menu bar
	-> colored background in thumbnail overview: light green=transcribed lines are there, 
		light yellow=now transcription (but lines segmented), light red=no line segmentation
	-> thumbnail overview also shows number of transcribed lines (per page and per document)
	-> automatic right to left text export for arabic, hebrew and so on
	-> included context menu in canvas (especially for tables)
	-> collapsed buttons to add elements to one dropdown button
	-> more strict version numbering (major version is first number, minor version is second number, hotfixes are third number; snapshot versions of any of those versions are identified by an additional fourth number and a '-SNAPSHOT' suffix)
	-> change to java 8
	-> first draft of table editor included (saving only works on local documents for now - until the server accepts the new PAGE format)
	-> removed obsolete writing orientation button
	-> redesigned tabs (no more right tab view)
	
0.9.1:
	-> save btn fix
	-> no more handles (transform) fix
	
0.9.2:
	-> reload doc btn reintegrated
	-> fixed reading order bug during split
	
0.10.0:
	-> vertical canvas edit toolbar
	-> removed all dropdown tool items and partially replaced by new toolboxes
	
0.10.1:
	-> "loadThumbs" property determines whether thumbnails are loaded (to prevent 'no more handles' issue)
	-> first version of local autosave
	-> pagination pagesize index out of bounds bug fixed
	-> setting heap space in windows starters (.exe & .bat) reversed due to "no more handles" bug
	-> Compare and show text differences of two versions in a text file (Tools - Compare)
	-> split/merge baselines is done for lines too; bugs fixed for undoing those actions
	
0.10.2:
	-> Deleting versions optimized
	-> Session expired check during recent doc load
	-> Change reading order optimized
	-> Refine reading order circles appearance
	-> Export tables into Docx and Excel (in excel tables only)
	
	